@@ -1,6 +1,8 @@
 Construo 0.2.2
 ==============
 
+ * made the ground look a bit nicer
+
  * fixed speed problem in the X11 target
 
 
